@@ -1,3 +1,10 @@
+2016-11-22  Niels Möller  <nisse@lysator.liu.se>
+
+	* tests/t-invert.c (test_3by2, test_2by1): New functions,
+	extracted from testmain.
+	(testmain): Add test with inputs which triggered the
+	mpn_invert_3by2 bug (see 2016-11-16 entry).
+
 2016-11-20  Niels Möller  <nisse@lysator.liu.se>
 
 	* tests/t-signed.c: Reorganize testcase, to avoid undefined
